added swagger docs template for user register as a test. the project needs to be swaggerized
